import org.joda.time.DateTime

buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath 'joda-time:joda-time:2.14.0'
    }
}

ext {
    getGitInfo = {
        def branch = ""
        def id = ""
        def rev = ""
        def origin = ""

        try {
            branch = new ByteArrayOutputStream().withStream { os ->
                exec {
                    commandLine 'git', 'rev-parse', '--abbrev-ref', 'HEAD'
                    standardOutput = os
                }
                return os.toString().trim()
            }

            id = new ByteArrayOutputStream().withStream { os ->
                exec {
                    commandLine 'git', 'rev-parse', 'HEAD'
                    standardOutput = os
                }
                return os.toString().trim()
            }

            rev = new ByteArrayOutputStream().withStream { os ->
                exec {
                    commandLine 'git', 'rev-list', '--count', 'HEAD'
                    standardOutput = os
                }
                return os.toString().trim()
            }

            origin = new ByteArrayOutputStream().withStream { os ->
                exec {
                    commandLine 'git', 'config', '--get', 'remote.origin.url'
                    standardOutput = os
                }
                return os.toString().trim()
            }
        } catch (Exception e) {
            logger.warn("Error executing git command: ${e.message}")
        }

        return [
                branch : branch,
                id     : id,
                rev    : rev,
                origin : origin
        ]
    }

    gitInfo = getGitInfo()
    buildSummary = gitInfo.id
    hostname = InetAddress.getLocalHost().getHostName().toUpperCase()
    now = DateTime.now().toString()
    rev = gitInfo.rev.replaceAll(/[^a-zA-Z0-9]/, '')

    branch = gitInfo.branch
    if (branch == 'master') {
        branch = 'release'
    } else if (branch.contains('/')) {
        branch = branch.substring(branch.indexOf('/') + 1)
    }

    baseVersion = '3.0.0'
    versionIdentifier = "${baseVersion}-${branch}_r${rev}"
    println "versionIdentifier: ${versionIdentifier}"
}

subprojects {
    apply plugin: 'java'
    group = 'org.nodel'
    version = rootProject.ext.baseVersion

    // GraalVM Polyglot (GraalPy) requires JDK 21+; the toolchain is auto-provisioned
    // by the foojay resolver (see settings.gradle) when no local JDK 21 is found
    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    repositories {
        mavenCentral()
    }
}
